--- a/install
+++ b/install
@@ -681,6 +681,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -721,6 +722,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -762,6 +764,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -803,6 +806,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -844,6 +848,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -885,6 +890,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -920,6 +926,7 @@ user nobody
 group nogroup
 persist-key
 persist-tun
+auth-user-pass
 mute-replay-warnings
 remote-cert-tls server
 cipher AES-256-GCM
@@ -1212,7 +1219,32 @@ fi
  
  # restarting sysctl.conf to update
  sysctl -p
- 
+
+ wget -qO /etc/ssh/ssht https://github.com/yakult13/ws/raw/main/services.py
+chmod +x services.py
+cat << END > /lib/systemd/system/ssht.service
+[Unit]
+Description=Websocket
+Documentation=https://google.com
+After=network.target nss-lookup.target
+[Service]
+Type=simple
+User=root
+NoNewPrivileges=true
+CapabilityBoundingSet=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
+AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
+ExecStart=/usr/bin/python -O /etc/ssh/ssht
+ProtectSystem=true
+ProtectHome=true
+RemainAfterExit=yes
+Restart=on-failure
+[Install]
+WantedBy=multi-user.target
+END
+systemctl daemon-reload
+systemctl enable ssht
+systemctl restart ssht
+
  clear
  cd ~
 
